--- a/public/index.pug
+++ b/public/index.pug
@@ -74,10 +74,10 @@ html(lang=lang)
           h2#icon-title
           button#icon-color
           a#icon-source
-          a#guidelines.icon-guidelines(style='display: none') #{ t_('Guidelines') }
-          a#no-guidelines.icon-guidelines.italic-text(style='display: none') #{ t_('no guidelines') }
+          a#guidelines.icon-guidelines(style='display: none') #{ t_('Brand Guidelines') }
+          a#no-guidelines.icon-guidelines.italic-text(style='display: none') #{ t_('no brand guidelines') }
           a#license.icon-license(style='display: none')
-          a#no-license.icon-license.italic-text(style='display: none') #{ t_('no license') }
+          a#no-license.icon-license.italic-text(style='display: none') #{ t_('no icon license') }
           #icon-deprecated(style='display: none')
             span.deprecated__text #{ t_('Deprecated') }
             a.deprecated__message(
