Refactor language selector

--- a/public/index.pug
+++ b/public/index.pug
@@ -196,7 +196,7 @@ html(lang=lang)
                 d='M16.513 23.996a.9.9 0 0 0 .885-.907v-4.972c.303-2.68 1.42-1.884 2.734-1.055 3.178 2.003 5.29-3.266 2.72-4.891-2.015-1.276-2.888.917-4.364.69-.57-.088-.967-.72-1.092-1.68V7.59c0-.5-.398-.907-.885-.907h-4.064c-3.355-.436-.377-2.339-.377-4.11C12.072 1.152 10.816 0 9.267 0 7.721 0 6.301 1.152 6.301 2.573c0 1.67 3.082 3.674-.32 4.11H.884A.898.898 0 0 0 0 7.59v3.583c.26 1.528 1.268 1.882 2.559.874.435-.341 1.17-.738 1.7-.738 1.385 0 2.51 1.285 2.51 2.871s-1.123 3.221-2.51 3.221c-.493 0-.954-.164-1.345-.45 0 .121-2.422-2.232-2.914.648v5.494c0 .5.398.907.885.907 2.728 0 5.453 0 8.18-.002.107-.525-.243-1.125-.571-1.646-2.582-4.1 7.463-4.508 4.88.128-.126.228-.253.45-.35.666-.124.27-.206.599-.188.852z'
               )
         li.header__list-item
-          button.header__list-icon.language-switcher(
+          button#language-selector.header__list-icon(
             title=`${ t_('Language') }`
           )
             svg(
@@ -207,17 +207,13 @@ html(lang=lang)
               path(
                 d='m12.87 15.07-2.54-2.51.03-.03A17.52 17.52 0 0 0 14.07 6H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7 1.62-4.33L19.12 17h-3.24z'
               )
-            .language-switcher__container
-              ul.language-switcher__list
-                each language in languages
-                  if language != languageOfTheBuild
-                    li.language-switcher__list-item(
-                      title=`${ languageNames[language] }`
-                    )
-                      .language-switcher__list-item-name
-                        a(
-                          href=`${language === DEFAULT_LANGUAGE ? `../` : (languageOfTheBuild === DEFAULT_LANGUAGE ? `${language}/` : `../${language}/`) }`
-                        ) #{ languageNames[language] }
+            ul.hidden
+              each language in languages
+                if language != languageOfTheBuild
+                  li(title=`${ languageNames[language] }`)
+                    a(
+                      href=`${language === DEFAULT_LANGUAGE ? `../` : (languageOfTheBuild === DEFAULT_LANGUAGE ? `${language}/` : `../${language}/`) }`
+                    ) #{ languageNames[language] }
       h1.header__title Simple Icons
       p.header__description !{ t_('$nIcons Free <abbr title="Scalable Vector Graphic">SVG</abbr> icons for popular brands').replace('$nIcons', `${iconCount}`) }
 
