Refactor tests and change translation

--- a/public/index.pug
+++ b/public/index.pug
@@ -496,5 +496,5 @@ html(lang=lang)
         span #{ t_('Share this on Twitter!') }
       .footer-repo
         p.
-          #[a(title=`${ t_('website repository') }`, href='https://github.com/simple-icons/simple-icons-website') #{ t_('Made with ❤️ on GitHub') }]
+          #[a(title=`${ t_('Website repository') }`, href='https://github.com/simple-icons/simple-icons-website') #{ t_('Made with ❤️ on GitHub') }]
     input#copy-input.hidden(aria-hidden='true', tabindex='-1')
