--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -594,6 +594,10 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   color: var(--color-link-visited);
 }
 
+#carbonads {
+  z-index: 12;
+}
+
 #carbonads,
 .grid-item {
   background-color: var(--color-background-card);
