--- a/public/index.pug
+++ b/public/index.pug
@@ -504,4 +504,4 @@ html(lang=lang)
   // (including the ad) to the top 5rem, putting the grid just belo
   // the controls:
   if mode != 'development'
-    style .layout-compact .grid { top: -5rem; position: relative; }
+    style .layout-compact .grid { position: relative; top: -4rem; }
