Move the compact mode grid to the top in production builds (#246)
* Move the grid to the top in production builds

* Add comments

* Fix errors displaying the ad

* Update translations

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -594,6 +594,10 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   color: var(--color-link-visited);
 }
 
+#carbonads {
+  z-index: 12;
+}
+
 #carbonads,
 .grid-item {
   background-color: var(--color-background-card);
@@ -787,7 +791,10 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   text-align: center;
 }
 @media (max-width: 1280px) {
-  #carbonads {
+  .layout-compact #carbonads {
+    grid-column: -3 / -1;
+  }
+  .layout-comfortable #carbonads {
     grid-column: -2 / -1;
   }
 }
