Fix comfortable mode grid alignment in production

--- a/public/index.pug
+++ b/public/index.pug
@@ -504,4 +504,6 @@ html(lang=lang)
   // (including the ad) to the top 5rem, putting the grid just belo
   // the controls:
   if mode != 'development'
-    style .layout-compact .grid { position: relative; top: -4rem; }
+    style
+      | .layout-comfortable .grid { position: relative; top: -1rem; }
+      | .layout-compact .grid { position: relative; top: -4rem; }
