Fix ad alignment in compact mode

--- a/public/index.pug
+++ b/public/index.pug
@@ -506,4 +506,4 @@ html(lang=lang)
   if mode != 'development'
     style
       | .layout-comfortable .grid { position: relative; top: -1rem; }
-      | .layout-compact .grid { position: relative; top: -4rem; }
+      | .layout-compact #carbonads { grid-row: -3/-1; padding-top: 15%; }
