Fix icon colors

--- a/public/index.pug
+++ b/public/index.pug
@@ -69,7 +69,7 @@ html(lang=lang)
     .detail_modal.detail__top.hidden
       .detail-body 
         .detail-body__left
-          img#icon-preview
+          img.icon-preview
         .detail-body__right
           h2#icon-title
           button#icon-color
